--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,17 +2,23 @@
 @tailwind components;
 @tailwind utilities;
 
-@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;500;600;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;500;600;700&display=swap");
 
 @layer base {
   * {
-    @apply box-border
+    @apply box-border;
   }
   html {
     @apply text-black;
-    font-family: 'Roboto Mono', monospace;
+    font-family: "Roboto Mono", monospace;
   }
-  body{
-    @apply overflow-x-hidden
+  body {
+    @apply overflow-x-hidden;
+  }
+  h1 {
+    @apply text-5xl font-bold;
+  }
+  p {
+    @apply text-lg;
   }
 }
