--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,7 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-@import url("https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;500;600;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap");
 
 @layer base {
   * {
@@ -10,7 +10,7 @@
   }
   html {
     @apply text-black;
-    font-family: "Roboto Mono", monospace;
+    font-family: "Poppins", sans-serif;
   }
   body {
     @apply overflow-x-hidden;
