--- a/styles/globals.css
+++ b/styles/globals.css
@@ -9,7 +9,7 @@
     @apply box-border;
   }
   html {
-    @apply text-black;
+    @apply text-black scroll-smooth;
     font-family: "Poppins", sans-serif;
   }
   body {
