--- a/styles/globals.css
+++ b/styles/globals.css
@@ -18,6 +18,12 @@
   h1 {
     @apply text-5xl font-bold;
   }
+  h2 {
+    @apply text-3xl font-bold;
+  }
+  h3 {
+    @apply text-2xl font-bold;
+  }
   p {
     @apply text-lg;
   }
