--- a/styles/globals.css
+++ b/styles/globals.css
@@ -30,4 +30,16 @@
   p {
     @apply text-lg;
   }
+  .accordion button {
+    padding: 0;
+    margin: 1rem 0;
+  }
+  .accordion button:focus {
+    @apply ring-0;
+  }
+  .accordion svg {
+    fill: #fab758;
+    width: 25px;
+    height: 25px;
+  }
 }
